[project]
name = "ai-agent-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-groq>=0.3.4",
    "langchain-openai>=0.3.26",
    "langchain-tavily>=0.2.4",
    "langgraph>=0.4.10",
    "pydantic>=2.11.7",
    "streamlit>=1.46.1",
    "uvicorn>=0.34.3",
]
